# wigglythings

./: .gitignore  .polyscope.ini  README.md  imgui.ini  out.txt  out.usdc  requirements.txt  run.sh
assets/: feather.msh  feathers.msh  feathers_thin.msh  grass_thick_base.msh  grasslike.msh  leg.mesh  less_leaves.msh  less_leaves_thick_base.msh  loosecoil.msh  spike.msh  teardrop.msh  tightcoil.msh
src/: base_instance.py  base_mesh.py  dyrt_utils.py  globals.py  instance.py  instances.py  main.py  matrix_utils.py  meshwriter.py  oldstep.py  read_obj.py  rodrigues_rotation.py  step.py  test_block_dim.py  test_kron.py  test_numpy.py  test_tile.py  test_wp.py  test_wp_tile.py  test_wp_torch.py  testviewergl.py  ui.py  usd_mesh_writer.py  viewergl.py
src/shapespectra/: airplane.py  main.py  neural_field.py  tet_mesh.py
src/simkit/: arap_hessian.py  deformation_jacobian.py  edge_lengths.py  linear_elasticity_hessian.py  mass_matrix.py  mat2py.py  neo_hookian_hessian.py  rotation_gradient.py  svd_rv.py  vectorized_transpose.py  vertex_to_simplex_adjacency.py  volume.py
src/vega/: StVKForce.h
usdmultimeshwriter-main/: README.md  pyproject.toml
usdmultimeshwriter-main/src/usdmultimeshwriter/: __init__.py  usdmultimeshwriter.py
usdmultimeshwriter-main/src/usdmultimeshwriter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
