[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usdmultimeshwriter"
version = "0.1.0"
description = "A sim-agnostic multi-object OpenUSD mesh writer (Y↔Z up-axis aware)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.3.4",
  "usd-core",
]

[project.urls]
Homepage = "https://github.com/dilevin/usdmultimeshwriter"
Issues = "https://github.com/dilevin/usdmultimeshwriter/issues"

[project.optional-dependencies]
dev = [
]

